# Cinder

./: .appveyor.yml  .appveyor_vc2017.yml  .appveyor_winrt.yml  .bitrise.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  README  README.md  WAP in C++ to generate the Fibonacci no. between 1-100  Welcome.html  bitrise.yml  build.gradle  settings.gradle
android/: CMakeLists.txt  cbuilder  cbuilder.sh  es2-fullbuild-arm64-v8a  es2-fullbuild-arm64-v8a.sh  es2-fullbuild-armeabi-v7a  es2-fullbuild-armeabi-v7a.sh  es2-fullbuild-armeabi.sh  es2-fullbuild-mips  es2-fullbuild-mips.sh  es2-fullbuild-mips64.sh  es2-fullbuild-x86  es2-fullbuild-x86.sh  es2-fullbuild-x86_64.sh  es2-fullbuild.sh  fullbuild  fullbuild-arm.sh  fullbuild-arm64-v8a  fullbuild-arm64-v8a.sh  fullbuild-arm64.sh  fullbuild-armeabi-v7a  fullbuild-armeabi-v7a.sh  fullbuild-armeabi.sh  fullbuild-mips  fullbuild-mips.sh  fullbuild-mips64.sh  fullbuild-x86  fullbuild-x86.sh  fullbuild-x86_64  fullbuild-x86_64.sh  fullbuild.sh  fullbuild_arm.sh
android/cmake/toolchains/: base-compile-flags.cmake  clang-arm64.cmake  gcc-arm32.cmake
android/libcinder_java/: build.gradle  settings.gradle
android/libcinder_java/app/: build.gradle
android/libcinder_java/app/src/main/: AndroidManifest.xml
android/libcinder_java/app/src/main/res/layout/: activity_camera_devices_list.xml  activity_camera_preview.xml  activity_url_loader.xml
android/libcinder_java/app/src/main/res/menu/: menu_camera_preview.xml
android/libcinder_java/app/src/main/res/values/: strings.xml
android/libcinder_java/app/src/main/res/values-v11/: styles.xml
android/libcinder_java/libcinder/: build.gradle
android/libcinder_java/libcinder/src/main/: AndroidManifest.xml
android/libcinder_proj/: build.gradle
android/libcinder_proj/app/src/main/: AndroidManifest.xml
android/libcinder_proj/app/src/main/res/layout/: activity_main.xml
android/libcinder_proj/app/src/main/res/menu/: menu_main.xml
android/libcinder_proj/app/src/main/res/values/: strings.xml
android/libcinder_proj/libcinder/: build.gradle
blocks/OSC/samples/SimpleReceiver/proj/cmake/: CMakeLists.txt
blocks/__AppTemplates/__Foundation/linux_cmake/: CMakeLists.txt  build  cibuild
docs/: COPYING  Credits.html  (+7 more)
emscripten/: CMakeLists.txt  cibuild  emsdk_set_env.sh
emscripten/cmake/: Cinder.cmake
emscripten/dev-server/: package.json
emscripten/sample_generation/: gensamples.py
linux/: CMakeLists.txt  build  cbuilder  cibuild  cinder.sublime-project
linux/cmake/: Cinder.cmake  CinderIncludes.cmake  CinderSources.cmake  DebugColours.cmake  FindCLANG.cmake  FindFontConfig.cmake  FindFreetype2.cmake  FindGStreamer.cmake  FindMPG123.cmake  FindSNDFILE.cmake  Freetype2Sources.cmake  GStreamerPluginsConfig.h.in  cinderConfig.buildtree.cmake.in
proj/android/: CMakeLists.txt  es2-fullbuild  es2-fullbuild-armeabi  es2-fullbuild-mips64  es2-fullbuild-x86_64  fullbuild-armeabi  fullbuild-armeabi-v7a  fullbuild-mips64
proj/android/libcinder_java/: build.gradle
proj/android/libcinder_java/app/: build.gradle
proj/android/libcinder_java/app/src/main/res/layout/: activity_camera_orient_locked.xml
proj/android/libcinder_java/app/src/main/res/menu/: menu_camera_orient_locked.xml
proj/android/libcinder_java/app/src/main/res/values/: styles.xml
proj/android/libcinder_java/app/src/main/res/values-v21/: styles.xml
proj/android/libcinder_java/gradle/wrapper/: gradle-wrapper.properties
proj/android/libcinder_java/libcinder/: build.gradle
samples/BasicApp/androidstudio/BasicApp/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
samples/BasicApp/androidstudio/BasicApp/app/src/main/: AndroidManifest.xml
samples/BasicApp/proj/cmake/: CMakeLists.txt  CMakeSettings.json
samples/FallingGears/proj/cmake/: CMakeLists.txt
samples/HodginParticlesRedux/linux/: CMakeLists.txt
samples/LocationManager/proj/cmake/: CMakeLists.txt
samples/MetalTriangle/proj/cmake/: CMakeLists.txt
samples/QuickTimeBasic/androidstudio/QuickTimeBasic/app/: CMakeLists.txt  build.gradle
samples/QuickTimeBasic/androidstudio/QuickTimeBasic/app/src/main/: AndroidManifest.xml
samples/RDiffusion/linux/: CMakeLists.txt
samples/TextBox/androidstudio/TextBox/app/: CMakeLists.txt  build.gradle
samples/TextBox/androidstudio/TextBox/app/src/main/: AndroidManifest.xml
samples/TextTest/androidstudio/TextTest/app/: CMakeLists.txt  build.gradle
samples/TextTest/androidstudio/TextTest/app/src/main/: AndroidManifest.xml
samples/TextureFont/linux/: CMakeLists.txt  build  build.sh
samples/_AllSamples/: CMakeLists.txt
samples/_AllSamples/vc10/: AllSamples.sln
samples/_AllSamples/vc11/: AllSamples.sln
samples/_AllSamples/vc2012/: AllSamples.sln
samples/_AllSamples/vc2013/: AllSamples.sln
samples/_AllSamples/vc2015/: AllSamples.sln  build_all_samples.bat
samples/_AllSamples/vc2019/: AllSamples.sln
samples/_AllSamples/vc2022/: AllSamples.sln
samples/_AllSamples/vc9/: AllSamples.sln
samples/_AllSamples/xcode/_AllSamples.xcodeproj/: project.pbxproj
samples/_AllSamples/xcode_iOS/_AllSamples_iOS.xcodeproj/: project.pbxproj
samples/_AllSamples/xcode_ios/_AllSamples_ios.xcodeproj/: project.pbxproj
samples/_audio/InputAnalyzer/androidstudio/InputAnalyzer/app/: CMakeLists.txt  build.gradle
samples/_emscripten/_audio/InputAnalyser/emscripten/: CMakeLists.txt
samples/_opengl/Cube/androidstudio/Cube/app/: CMakeLists.txt  build.gradle
samples/_opengl/CubeMapping/androidstudio/CubeMapping/app/: CMakeLists.txt  build.gradle
samples/_opengl/DeferredShading/androidstudio/DeferredShading/app/: CMakeLists.txt  build.gradle
samples/_opengl/NormalMapping/linux/: CMakeLists.txt
samples/_opengl/ShadowMappingBasic/linux/: CMakeLists.txt
samples/_svg/AnimatedReveal/proj/cmake/: CMakeLists.txt
samples/_svg/EuroMap/proj/cmake/: CMakeLists.txt
test/CMake/TestApp/: CMakeLists.txt  build_for_linux.sh  build_for_macosx.sh
test/CMake/TestApp/src/: BasicApp.cpp
test/Linux/GStreamerPlayer/linux/: CMakeLists.txt
(+10713 files in other folders)
